@@ -18,7 +18,7 @@ install.packages(pkgs, lib, repos = getOption("repos"),
                  configure.args = getOption("configure.args"),
                  configure.vars = getOption("configure.vars"),
                  clean = FALSE, Ncpus = getOption("Ncpus"),
-                 libs_only = FALSE, \dots)
+                 libs_only = FALSE, INSTALL_opts, \dots)
 }
 \arguments{
   \item{pkgs}{character vector of the short names of packages whose
@@ -133,10 +133,21 @@ install.packages(pkgs, lib, repos = getOption("repos"),
     \command{make -j \var{Ncpus}} works).  Defaults to \code{1} if the
     option is unset.
   }
-  \item{libs_only}{a logical value: should the \option{--libs-only}
-    option be used to install only additional sub-architectures?
+  \item{libs_only}{
+    a logical value: should the \option{--libs-only} option be used to
+    install only additional sub-architectures?  (See also
+    \code{INSTALL_opts}.)  This can also be used on Windows to install
+    just the DLL(s) from a binary package, e.g. to add 64-bit DLLs to a
+    32-bit install. 
   }
-  \item{\dots}{Arguments to be passed to \code{\link{download.file}}.}
+  \item{INSTALL_opts}{
+    an optional character vector of additional option(s) to be passed to
+    \command{R CMD INSTALL} for a source package install.  E.g.
+    \code{c("--html", "--no-multiarch")}.
+  }
+  \item{\dots}{
+    Arguments to be passed to \code{\link{download.file}}.
+  }
 }
 \details{
   \R packages are primarily distributed as \emph{source} packages, but
