@@ -153,6 +153,10 @@ NEW FEATURES
 	file: all of [bgx]zfile() allow streams to be appended to an
 	existing file, but bzfile() reads only the first stream.
 
+    o	install.packages() has a new optional argument 'INSTALL_opts'
+    	which can be used to pass options to R CMD INSTALL for
+    	source-package installs.
+
 
 DEPRECATED & DEFUNCT
 
